--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Pizzlad Industries - Professional Game Panel Toucher</title>
+    <title>Pizzlad Industries</title>
     <meta name="description" content="Professional Vulnerability Testing Services - If Requested I will touch your game panel" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
